2012-01-05  Tien Ren Chen  <trchen@chromium.org>

        [chromium] Add CCTimer class for the compositor
        https://bugs.webkit.org/show_bug.cgi?id=74769

        Reviewed by James Robinson.

        Add a simple timer class for CCThread that the timered task can be
        manually cancelled.

        * WebKit.gypi:
        * tests/CCTimerTest.cpp: Added.
        (WebKitTests::CCTimerTest::CCTimerTest):
        (WebKitTests::CCTimerTest::onTimerFired):
        (WebKitTests::TEST_F):

2012-01-04  Adrienne Walker  <enne@google.com>

        [chromium] Create unit tests for CCTiledLayerImpl
        https://bugs.webkit.org/show_bug.cgi?id=75557

        Reviewed by James Robinson.

        Add some quad generation tests for tiled layers.

        * WebKit.gypi:
        * tests/CCTiledLayerImplTest.cpp: Added.
        (WebCore::createLayer):
        (WebCore::TEST):
        (WebCore::completelyContains):
        (WebCore::getQuads):
        (WebCore::verifyQuadsExactlyCoverRect):
        (WebCore::coverageVisibleRectOnTileBoundaries):
        (WebCore::coverageVisibleRectIntersectsTiles):
        (WebCore::coverageVisibleRectIntersectsBounds):

2012-01-05  David Reveman  <reveman@chromium.org>

        [Chromium] Remove WebSettings::setAcceleratedDrawingEnabled from public API.
        https://bugs.webkit.org/show_bug.cgi?id=74125

        Reviewed by James Robinson.

        Remove setAcceleratedDrawingEnabled method from WebSettings class.

        * public/WebSettings.h:
        * src/WebSettingsImpl.cpp:
        * src/WebSettingsImpl.h:

2012-01-05  Peter Beverloo  <peter@chromium.org>

        [Chromium] Upstream the RenderTheme and ScrollbarTheme for Android
        https://bugs.webkit.org/show_bug.cgi?id=74614

        Reviewed by Adam Barth.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setScrollbarColors):
        (WebKit::WebViewImpl::setSelectionColors):

2012-01-05  Fady Samuel  <fsamuel@chromium.org>
